testing graph structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="app">
-      <h1>Wew</h1>
+      <h1>Workshopping DS/A for Procedural Music Generation</h1>
       <div id="where-thing-go">
         
       </div>
